# pivot_script

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: lint.yml
pivot_script/: main.py  utils.py
tests/: test_main.py
