[tool.poetry]
name = "pivot_script"
version = "0.1.0"
description = "Write the request from a Metabase query that linearize answers of a Decidim survey"
authors = ["dynnammo <contact@opensourcepolitics.eu>"]
readme = "README.md"
packages = [{include = "pivot_script"}]

[tool.poetry.dependencies]
python = "^3.10"
metabase-api = "^0.3.0"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
pre-commit = "^3.0.0"
ggshield = "^1.14.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
